--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 /y3s1/DMD/SQL
 /y3s1/DMD/ProjectX
 
+Modern Operating Systems (4th Edition).pdf
+Ready_for_CAE_BOOK.pdf
+3_Advanced_Grammar_in_Use_-_3rd_Edition.pdf
+
 
 *.class
 
